tests/baselines/reference/reservedNameOnInterfaceImport.errors.txt
tests/cases/compiler/reservedNameOnInterfaceImport.ts(5,12): error TS2438: Import name cannot be 'string'.


==== tests/cases/compiler/reservedNameOnInterfaceImport.ts (1 errors) ====
    declare module test {
        interface istring { }
    
        // Should error; 'test.istring' is a type, so this import conflicts with the 'string' type.
        import string = test.istring;
               ~~~~~~
!!! error TS2438: Import name cannot be 'string'.
    }
    